tests/ui/fail/output-type-conflicting-01.stderr
error: encountered conflicting Output types in #[union_fn] trait
 --> tests/ui/fail/output-type-conflicting-01.rs:6:5
  |
6 |     type Output = i64;
  |     ^^^^^^^^^^^^^^^^^^

error: previous Output definition here
 --> tests/ui/fail/output-type-conflicting-01.rs:5:5
  |
5 |     type Output = i32;
  |     ^^^^^^^^^^^^^^^^^^
